typescript/checker/tests/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments17.ts.stderr
error: 'eval' and 'arguments' cannot be used as a binding identifier in string mode
 --> $DIR/tests/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments17.ts:8:9
  |
8 |     var arguments = "world";
  |         ^^^^^^^^^

